--- a/Castle Math/Assets/EasyMobile/Editor/Templates/AndroidLibTemplate/AndroidManifest.xml
+++ b/Castle Math/Assets/EasyMobile/Editor/Templates/AndroidLibTemplate/AndroidManifest.xml
@@ -5,6 +5,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
     package="__AndroidManifest_Package__"
     android:versionCode="__AndroidManifest_VersionCode__"
     android:versionName="__AndroidManifest_VersionName__">
