--- a/Castle Math/Assets/Plugins/Android/com.sglib.easymobile.easy-mobile-1.0.3/AndroidManifest.xml
+++ b/Castle Math/Assets/Plugins/Android/com.sglib.easymobile.easy-mobile-1.0.3/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
     package="com.sglib.easymobile.androidnative"
     android:versionName="1.0.3" >
 
@@ -18,7 +17,7 @@
         <!-- FileProvider for sharing feature -->
         <provider
             android:name="com.sglib.easymobile.androidnative.EMFileProvider"
-            android:authorities="com.Company.ProductName.easymobile_fileprovider"
+            android:authorities="com.Lucerna.MedievalMath.easymobile_fileprovider"
             android:exported="false"
             android:grantUriPermissions="true" >
             <meta-data
