--- a/Castle Math/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Castle Math/Assets/Plugins/Android/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
     package="com.amazonaws.unity"
 	  android:installLocation="preferExternal"
     android:versionCode="1"
@@ -13,7 +14,7 @@
       android:xlargeScreens="true"
       android:anyDensity="true"/>
 
-  <uses-sdk android:minSdkVersion="9" />
+  <uses-sdk android:minSdkVersion="19" />
 
 
   <uses-permission android:name="android.permission.INTERNET" />
