--- a/Castle Math/Assets/Plugins/Android/com.sglib.easymobile.easy-mobile-1.0.3/AndroidManifest.xml
+++ b/Castle Math/Assets/Plugins/Android/com.sglib.easymobile.easy-mobile-1.0.3/AndroidManifest.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest 
-	xmlns:tools="http://schemas.android.com/tools"
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sglib.easymobile.androidnative"
     android:versionName="1.0.3" >
 
     <uses-sdk
-        android:minSdkVersion="19"
+        android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
     <!-- Permission required to automatically restore un-interacted notifications if the user reboots the device -->
@@ -19,7 +17,7 @@
         <!-- FileProvider for sharing feature -->
         <provider
             android:name="com.sglib.easymobile.androidnative.EMFileProvider"
-            android:authorities="com.Lucerna.MedievalMath.easymobile_fileprovider"
+            android:authorities="com.lucerna.medievalMathVR.easymobile_fileprovider"
             android:exported="false"
             android:grantUriPermissions="true" >
             <meta-data
