I don't know what this is, but it looks like a lot

--- a/Castle Math/Assets/Plugins/Android/com.sglib.easymobile.easy-mobile-1.0.3/AndroidManifest.xml
+++ b/Castle Math/Assets/Plugins/Android/com.sglib.easymobile.easy-mobile-1.0.3/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <!-- FileProvider for sharing feature -->
         <provider
             android:name="com.sglib.easymobile.androidnative.EMFileProvider"
-            android:authorities="com.Lucerna.medievalMathVR.easymobile_fileprovider"
+            android:authorities="com.lucerna.medievalMathVR.easymobile_fileprovider"
             android:exported="false"
             android:grantUriPermissions="true" >
             <meta-data
