added potion shop animation. fixed potion label bug

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@
 *.blend1
 *.apk
 Castle Math/Assets/CSV/Question_Tracker.csv
+Castle Math/.vs/Castle Math/v14/.suo
+Castle Math/Assets/StreamingAssets/build_info.txt
+Castle Math/ProjectSettings/ProjectSettings.asset
