added IAP math unlock, tried to fix frost level math not showing up

--- a/Castle Math/Assets/Resources/IAPProductCatalog.json
+++ b/Castle Math/Assets/Resources/IAPProductCatalog.json
@@ -1,1 +1,1 @@
-{"appleSKU":"","appleTeamID":"","enableCodelessAutoInitialization":false,"products":[{"id":"com.medievalmath.autosmall","type":2,"storeIDs":[],"defaultDescription":{"googleLocale":4,"title":"One Month Subscription","description":""},"screenshotPath":"","applePriceTier":0,"xiaomiPriceTier":0,"googlePrice":{"data":[0,0,0,0],"num":0.0},"pricingTemplateID":"","descriptions":[],"payouts":[]}]}
+{"appleSKU":"","appleTeamID":"","enableCodelessAutoInitialization":false,"products":[]}
